Fix - Minor bug

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 		</header>
 
 		<main>
-			<section class="home container" id="home">
+			<section class="home" id="home">
 				<img src="./assets/images/hero.jpg" class="home__img" alt="" />
 				<div class="home__data">
-					<h1>
+					<h1 class="container">
 						Yuk Kenali Lebih Dekat 9 Profile Lengkap Anggota Twice
 					</h1>
 				</div>
